增加consul注册中心插件

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -35,3 +35,11 @@ apisix:
     - name: admin
       key: edd1c9f034335f136f87ad84b625c8f1  # using fixed API token has security risk, please update it when you deploy to production environment
       role: admin
+discovery:
+  consul:
+    prefix: "motanrpc"
+    servers:
+      - "http://172.17.221.240:8500"
+      - "http://172.17.221.241:8500"
+nginx_config:
+  error_log_level: "warn"
